[package]
name = "actix-stateful-session"
version = "0.1.0"
edition = "2018"
authors = ["Aravinth Manivannan <realaravinth@batsense.net>"]
license = "MIT or Apache-2.0"
repository = "https://github.com/realaravinth/actix-stateful-sessions"
description = "Stateful session for Actix Web"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "actix_stateful_session"
path = "src/lib.rs"

[dependencies]
actix-web = { version = "4.0.0-beta.8", default_features = false, features = ["cookies"]}
cookie = {version = "0.15.0", feautres = ["percent-encode"]}
actix-service = "2.0.0-beta.5"

derive_more = "0.99.5"
derive_builder = "0.10"
futures-util = { version = "0.3.7", default-features = false }
log = "0.4"
#serde = "1.0"
#serde_json = "1.0"
time = "0.2.23"

rand = "0.8"

[dev-dependencies]
actix-rt = "2"
